deploy/welcome/welcome-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome
  namespace: default
  labels:
    app: welcome
spec:
  type: ClusterIP
  selector:
    app: welcome
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
