deploy/welcome/welcome-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-basedjourney
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: basedjourney.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome
            port:
              number: 80
  tls:
  - hosts:
    - basedjourney.com
    secretName: basedjourney-com-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-generalpurposetransformer
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: generalpurposetransformer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome
            port:
              number: 80
  tls:
  - hosts:
    - generalpurposetransformer.com
    secretName: generalpurposetransformer-com-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-matrixmilady
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: matrixmilady.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome
            port:
              number: 80
  tls:
  - hosts:
    - matrixmilady.com
    secretName: matrixmilady-com-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-milady-api
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: milady.api
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome
            port:
              number: 80
  tls:
  - hosts:
    - milady.api
    secretName: milady-api-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-miladyos-com
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: miladyos.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome
            port:
              number: 80
  tls:
  - hosts:
    - miladyos.com
    secretName: miladyos-com-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-miladyos-net
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: miladyos.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome
            port:
              number: 80
  tls:
  - hosts:
    - miladyos.net
    secretName: miladyos-net-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-radbrocorp
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: radbrocorp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome
            port:
              number: 80
  tls:
  - hosts:
    - radbrocorp.com
    secretName: radbrocorp-com-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-theycallmeloki
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: theycallmeloki.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome
            port:
              number: 80
  tls:
  - hosts:
    - theycallmeloki.site
    secretName: theycallmeloki-site-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-tiniercorp
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: tiniercorp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome
            port:
              number: 80
  tls:
  - hosts:
    - tiniercorp.com
    secretName: tiniercorp-com-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-transparentlyrotatableproxy
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
  - host: transparentlyrotatableproxy.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome
            port:
              number: 80
  tls:
  - hosts:
    - transparentlyrotatableproxy.me
    secretName: transparentlyrotatableproxy-me-tls
